# person-service

./: .gitignore  Makefile
person-app/controller/: Cargo.toml
person-app/controller/src/: create_person.rs  delete_one_person_by_id.rs  get_one_person_by_id.rs  get_person_collection.rs  lib.rs  update_person_by_id.rs
person-app/controller/src/openapi/: mod.rs  person_upsert.rs  person_view.rs
person-app/db-postgres/: Cargo.toml
person-app/db-postgres/src/: config.rs  db_column.rs  lib.rs
person-app/db-postgres/src/person_gateway/: delete_one_person_by_id_adapter.rs  find_one_person_by_id_adapter.rs  find_person_collection_adapter.rs  insert_person_adapter.rs  mod.rs  update_person_by_id_adapter.rs
person-app/db-postgres/src/personal_id_number_gateway/: find_personal_id_number_collection_adapter.rs  mod.rs  repository.rs
person-app/db-postgres/src/saint_gateway/: find_saint_by_id_adapter.rs  mod.rs  repository.rs
person-app/domain/: Cargo.toml
person-app/domain/src/entities/: educational_stage.rs  language.rs  mod.rs  person.rs  title.rs  vow_progress.rs
person-app/domain/src/ports/: find_one_person_by_id_port.rs  insert_person_port.rs  mod.rs  person_db_gateway.rs  person_dbresponse.rs  person_mutation_dbrequest.rs
person-app/domain/src/usecases/: create_person_usecase.rs  delete_person_usecase.rs  mod.rs  person_usecase_shared_models.rs  query_one_person_by_id_usecase.rs  query_one_personal_id_number_usecase.rs  query_person_collection_usecase.rs  update_one_person_by_id.rs  update_one_person_by_id_usecase.rs
person-lambda/: Cargo.toml
(+50 files in other folders)
