[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hvcg_biography_openapi_person = { path = "../../person-openapi" }
domain = { path = "../domain" }
db-postgres = { path = "../db-postgres" }
uuid = { version = "0.8", features = ["v4"] }


[dev-dependencies]
dotenv = "0.15.0"
