[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hvcg_biography_openapi_person = { path = "../../person-openapi" }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.50"
uuid = { version = "0.8", features = ["v4"] }
